Fix exit not found error in liveness probe manifest

--- a/11-probes/01-liveness-probe.yml
+++ b/11-probes/01-liveness-probe.yml
@@ -10,7 +10,8 @@ spec:
       livenessProbe:
         exec:
           command:
-            - exit
-            - "1"
+            - /bin/bash
+            - -c
+            - "exit 1"
         initialDelaySeconds: 5
         periodSeconds: 5
