--- a/20-operators/01-mysql-operator.yml
+++ b/20-operators/01-mysql-operator.yml
@@ -201,7 +201,7 @@ spec:
     singular: mysqlbackupschedule
     plural: mysqlbackupschedules
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql-operator
