--- a/08-service/04-ingress.yml
+++ b/08-service/04-ingress.yml
@@ -7,5 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   backend:
-    serviceName: simple-internal-service
-    servicePort: 80
+    service:
+      name: simple-internal-service
+      port:
+        number: 80
