--- a/14-pdb/kind.yml
+++ b/14-pdb/kind.yml
@@ -1,7 +1,7 @@
 ---
 # three node (two workers) cluster config
 kind: Cluster
-apiVersion: kind.sigs.k8s.io/v1alpha3
+apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
   - role: control-plane
   - role: worker
