Log collection example for sidecar containers

--- a/16-sidecar-containers/01-sidecar.yml
+++ b/16-sidecar-containers/01-sidecar.yml
@@ -5,18 +5,21 @@ metadata:
   name: two-containers
 spec:
   volumes:
-    - name: shared-data
+    - name: shared-logs
       emptyDir: {}
+    - name: fluentd-config
+      configMap:
+        name: fluentd
   containers:
     - name: nginx
       image: nginx
       volumeMounts:
-        - name: shared-data
-          mountPath: /usr/share/nginx/html
-    - name: debian
-      image: debian
+        - name: shared-logs
+          mountPath: /var/log/nginx
+    - name: fluentd
+      image: fluent/fluentd:v1.11-1
       volumeMounts:
-        - name: shared-data
-          mountPath: /pod-data
-      command: ["/bin/sh"]
-      args: ["-c", "echo Hello from the debian container > /pod-data/index.html"]
+        - name: shared-logs
+          mountPath: /logs
+        - name: fluentd-config
+          mountPath: /fluentd/etc
