--- a/08-service/04-ingress.yml
+++ b/08-service/04-ingress.yml
@@ -1,11 +1,13 @@
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: simple-ingress
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  backend:
-    serviceName: simple-internal-service
-    servicePort: 80
+  defaultBackend:
+    service:
+      name: simple-internal-service
+      port:
+        number: 80
