feat: update pdb apiVersion

--- a/14-pdb/01-pdb.yml
+++ b/14-pdb/01-pdb.yml
@@ -29,7 +29,7 @@ spec:
                         - nginx-pdb
                 topologyKey: kubernetes.io/hostname
 ---
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: nginx-pdb
